--- a/assets/css/my-style.scss
+++ b/assets/css/my-style.scss
@@ -16,6 +16,7 @@
     // units
     --bradius: 10px;
     --main-space: 20px;
+    --trans-sec: .5s;
 }
 
 body {
@@ -65,6 +66,7 @@ p {
     padding-left: calc(var(--main-space) - 10px);
 }
 
+
 .navbar {
     background-color: var(--menu-bg-color);
 
@@ -101,10 +103,13 @@ span.face {
             height: 200px;
             width: 100%;
 
+            transition: .5s;
+
             .settings-header {
                 img {
                     width: 15px;
                     height: 15px;
+                    transition: .5s
                 }
             }
         }
@@ -144,3 +149,14 @@ span.face {
 }
 
 .foot {}
+
+
+@media (max-width:600px) {
+    .left {
+        border: 0;
+    }
+}
+
+@media (min-width:700px) {}
+
+@media (min-width:1200px) {}
